[VNN] Fix horizontal scrolling

--- a/chat/src/App.css
+++ b/chat/src/App.css
@@ -111,7 +111,7 @@ hr {
 }
 
 .messages-gauche {
-  width: 80%;
+  width: 60%;
   text-align: left;
   /* border-radius: 15px;
   padding: 2px 15px 2px 15px; */
@@ -119,7 +119,7 @@ hr {
 }
 
 .messages-droite {
-  width: 85%;
+  width: 65%;
   /* padding: 2px 15px 2px 15px;
   border-radius: 15px; */
   clear: both;
@@ -172,6 +172,7 @@ ul.messages-list {
 
 p {
   margin-bottom: 0 !important;
+  /* white-space: normal; */
 }
 
 .error {
